Remove event type

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,7 +1,5 @@
 name: Execute e2e
-on:
-  repository_dispatch:
-    types: [trigger-workflow]
+on: [repository_dispatch]
 jobs:
   e2e:
     runs-on: ubuntu-latest
